--- a/clientapp/src/app/app.component.html
+++ b/clientapp/src/app/app.component.html
@@ -1,5 +1,2 @@
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
-
-<button mat-raised-button>CLICK</button>
