Role-based-access-p10

--- a/clientapp/src/app/pages/navbar/navbar.component.html
+++ b/clientapp/src/app/pages/navbar/navbar.component.html
@@ -38,6 +38,13 @@
               <span>Logout</span>
             </button>
           </mat-menu>
+          <a
+            *ngIf="userDetail?.roles.includes('Admin')"
+            mat-button
+            routerLink="/users"
+          >
+            <mat-icon>groups</mat-icon>
+          </a>
         </div>
       </div>
     </ng-container>
