--- a/clientapp/src/app/pages/home/home.component.html
+++ b/clientapp/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
 
         <a
           class="inline-flex text-white items-center px-6 py-3 font-medium bg-rose-500 rounded-lg hover:opacity-75"
-          routerLink="/login"
+          routerLink="/login" *ngIf="!showData"
         >
           <svg
             fill="white"
