--- a/clientapp/src/app/pages/navbar/navbar.component.html
+++ b/clientapp/src/app/pages/navbar/navbar.component.html
@@ -44,6 +44,15 @@
             routerLink="/users"
           >
             <mat-icon>groups</mat-icon>
+            Users
+          </a>
+          <a
+            *ngIf="userDetail?.roles.includes('Admin')"
+            mat-button
+            routerLink="/roles"
+          >
+            <mat-icon> settings </mat-icon>
+            Roles
           </a>
         </div>
       </div>
