--- a/clientapp/src/app/pages/forget-password/forget-password.component.html
+++ b/clientapp/src/app/pages/forget-password/forget-password.component.html
@@ -23,16 +23,16 @@
     <div class="w-full px-8 md:px-32 lg:px-24">
       <form
         class="bg-white rounded-md shadow-2xl p-5"
-        [formGroup]="loginForm"
-        (ngSubmit)="login()"
+        [formGroup]="forgotPassword"
+        (ngSubmit)="sendLink()"
       >
-        <h1 class="text-gray-800 font-bold text-2xl mb-1">Hello Again!</h1>
-        <p class="text-sm font-normal text-gray-600 mb-8">Welcome Back</p>
+        <h1 class="text-gray-800 font-bold text-2xl mb-1">FORGOT PASSWORD</h1>
+        <p class="text-sm font-normal text-gray-600 mb-8">A password reset link will be sent to your registered Email!</p>
         <div
           class="flex items-center border-2 mb-8 py-2 px-3 rounded-2xl"
           [style]="
-            loginForm.controls['email'].errors &&
-            loginForm.controls['email'].touched
+            forgotPassword.controls['email'].errors &&
+            forgotPassword.controls['email'].touched
               ? 'border-color: red;'
               : ''
           "
@@ -60,59 +60,23 @@
             placeholder="Email Address"
           />
         </div>
-        <div
-          class="flex items-center border-2 mb-12 py-2 px-3 rounded-2xl"
-          [style]="
-            loginForm.controls['password'].errors &&
-            loginForm.controls['password'].touched
-              ? 'border-color: red;'
-              : ''
-          "
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-400"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fillRule="evenodd"
-              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-              clipRule="evenodd"
-            />
-          </svg>
-          <input
-            class="pl-2 w-full outline-none border-none"
-            formControlName="password"
-            type="password"
-            name="password"
-            id="password"
-            placeholder="Password"
-          />
-        </div>
         <button
           type="submit"
-          [disabled]="!loginForm.valid"
+          [disabled]="!forgotPassword.valid"
           [ngClass]="
-            loginForm.valid
+            forgotPassword.valid
               ? 'hover:bg-indigo-700 hover:-translate-y-1 transition-all duration-500'
               : ''
           "
           class="block w-full bg-indigo-600 mt-5 py-2 rounded-2xl text-white font-semibold mb-2"
         >
-          Login
+          Send Reset Link
         </button>
         <div class="flex justify-between mt-4">
           <span
-            routerLink="/forgot-password"
+            routerLink="/login"
             class="text-sm ml-2 hover:text-blue-500 cursor-pointer hover:-translate-y-1 duration-500 transition-all"
-            >Forgot Password ?</span
-          >
-
-          <a
-            routerLink="/register"
-            class="text-sm ml-2 hover:text-blue-500 cursor-pointer hover:-translate-y-1 duration-500 transition-all"
-            >Don't have an account yet?</a
+            >Login here</span
           >
         </div>
       </form>
