--- a/clientapp/src/app/pages/reset-password/reset-password.component.html
+++ b/clientapp/src/app/pages/reset-password/reset-password.component.html
@@ -23,48 +23,18 @@
     <div class="w-full px-8 md:px-32 lg:px-24">
       <form
         class="bg-white rounded-md shadow-2xl p-5"
-        [formGroup]="loginForm"
-        (ngSubmit)="login()"
+        [formGroup]="resetPassword"
+        (ngSubmit)="reset()"
       >
-        <h1 class="text-gray-800 font-bold text-2xl mb-1">Hello Again!</h1>
-        <p class="text-sm font-normal text-gray-600 mb-8">Welcome Back</p>
-        <div
-          class="flex items-center border-2 mb-8 py-2 px-3 rounded-2xl"
-          [style]="
-            loginForm.controls['email'].errors &&
-            loginForm.controls['email'].touched
-              ? 'border-color: red;'
-              : ''
-          "
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5 text-gray-400"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
-            />
-          </svg>
-          <input
-            id="email"
-            formControlName="email"
-            class="pl-2 w-full outline-none border-none"
-            type="email"
-            name="email"
-            placeholder="Email Address"
-          />
-        </div>
+        <h1 class="text-gray-800 font-bold text-2xl mb-1">RESET PASSWORD</h1>
+        <p class="text-sm font-normal text-gray-600 mb-8">
+          Enter your new password!
+        </p>
         <div
           class="flex items-center border-2 mb-12 py-2 px-3 rounded-2xl"
           [style]="
-            loginForm.controls['password'].errors &&
-            loginForm.controls['password'].touched
+            resetPassword.controls['newPassword'].errors &&
+            resetPassword.controls['newPassword'].touched
               ? 'border-color: red;'
               : ''
           "
@@ -83,36 +53,30 @@
           </svg>
           <input
             class="pl-2 w-full outline-none border-none"
-            formControlName="password"
+            formControlName="newPassword"
             type="password"
-            name="password"
-            id="password"
-            placeholder="Password"
+            name="newPassword"
+            id="newPassword"
+            placeholder="New Password"
           />
         </div>
         <button
           type="submit"
-          [disabled]="!loginForm.valid"
+          [disabled]="!resetPassword.valid"
           [ngClass]="
-            loginForm.valid
+            resetPassword.valid
               ? 'hover:bg-indigo-700 hover:-translate-y-1 transition-all duration-500'
               : ''
           "
           class="block w-full bg-indigo-600 mt-5 py-2 rounded-2xl text-white font-semibold mb-2"
         >
-          Login
+          Reset
         </button>
         <div class="flex justify-between mt-4">
           <span
-            routerLink="/forgot-password"
+            routerLink="/login"
             class="text-sm ml-2 hover:text-blue-500 cursor-pointer hover:-translate-y-1 duration-500 transition-all"
-            >Forgot Password ?</span
-          >
-
-          <a
-            routerLink="/register"
-            class="text-sm ml-2 hover:text-blue-500 cursor-pointer hover:-translate-y-1 duration-500 transition-all"
-            >Don't have an account yet?</a
+            >Login here</span
           >
         </div>
       </form>
