--- a/clientapp/src/app/pages/change-password/change-password.component.html
+++ b/clientapp/src/app/pages/change-password/change-password.component.html
@@ -11,7 +11,7 @@
   >
     <div class="bg-black opacity-20 inset-0 z-0"></div>
     <div class="w-full mx-auto px-20 flex-col items-center space-y-6">
-      <h1 class="text-white font-bold text-4xl font-sans">MyApp - Forgot Password</h1>
+      <h1 class="text-white font-bold text-4xl font-sans">MyApp - Change Password</h1>
       <p class="text-white mt-1">
         JWTAuth - Angular 14 & .NET 6 Authentication 🔐
       </p>
@@ -23,18 +23,48 @@
     <div class="w-full px-8 md:px-32 lg:px-24">
       <form
         class="bg-white rounded-md shadow-2xl p-5"
-        [formGroup]="resetPassword"
-        (ngSubmit)="reset()"
+        [formGroup]="changePassword"
+        (ngSubmit)="change()"
       >
-        <h1 class="text-gray-800 font-bold text-2xl mb-1">RESET PASSWORD</h1>
+        <h1 class="text-gray-800 font-bold text-2xl mb-1">CHANGE PASSWORD</h1>
         <p class="text-sm font-normal text-gray-600 mb-8">
-          Enter your new password!
+          Update your new password!
         </p>
         <div
           class="flex items-center border-2 mb-12 py-2 px-3 rounded-2xl"
           [style]="
-            resetPassword.controls['newPassword'].errors &&
-            resetPassword.controls['newPassword'].touched
+            changePassword.controls['currentPassword'].errors &&
+            changePassword.controls['currentPassword'].touched
+              ? 'border-color: red;'
+              : ''
+          "
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-5 w-5 text-gray-400"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              fillRule="evenodd"
+              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+              clipRule="evenodd"
+            />
+          </svg>
+          <input
+            class="pl-2 w-full outline-none border-none"
+            formControlName="currentPassword"
+            type="password"
+            name="currentPassword"
+            id="currentPassword"
+            placeholder="Current Password"
+          />
+        </div>
+        <div
+          class="flex items-center border-2 mb-12 py-2 px-3 rounded-2xl"
+          [style]="
+            changePassword.controls['newPassword'].errors &&
+            changePassword.controls['newPassword'].touched
               ? 'border-color: red;'
               : ''
           "
@@ -62,15 +92,15 @@
         </div>
         <button
           type="submit"
-          [disabled]="!resetPassword.valid"
+          [disabled]="!changePassword.valid"
           [ngClass]="
-            resetPassword.valid
+            changePassword.valid
               ? 'hover:bg-indigo-700 hover:-translate-y-1 transition-all duration-500'
               : ''
           "
           class="block w-full bg-indigo-600 mt-5 py-2 rounded-2xl text-white font-semibold mb-2"
         >
-          Reset
+          Change Password
         </button>
         <div class="flex justify-between mt-4">
           <span
