--- a/clientapp/src/app/pages/forget-password/forget-password.component.html
+++ b/clientapp/src/app/pages/forget-password/forget-password.component.html
@@ -11,7 +11,7 @@
   >
     <div class="bg-black opacity-20 inset-0 z-0"></div>
     <div class="w-full mx-auto px-20 flex-col items-center space-y-6">
-      <h1 class="text-white font-bold text-4xl font-sans">MyApp - Login</h1>
+      <h1 class="text-white font-bold text-4xl font-sans">MyApp - Forgot Password</h1>
       <p class="text-white mt-1">
         JWTAuth - Angular 14 & .NET 6 Authentication 🔐
       </p>
