--- a/clientapp/src/app/pages/navbar/navbar.component.html
+++ b/clientapp/src/app/pages/navbar/navbar.component.html
@@ -37,6 +37,10 @@
               <mat-icon> logout </mat-icon>
               <span>Logout</span>
             </button>
+            <button routerLink="/change-password" mat-menu-item>
+              <mat-icon> password </mat-icon>
+              <span>Change Password</span>
+            </button>
           </mat-menu>
           <a
             *ngIf="userDetail?.roles.includes('Admin')"
